# MIDI2CV

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MIDI2CV.code-workspace  Makefile  README.md  STM32Make.make
inc/: cv_convert.h  main.h  midi_receive.h  system_init.h
include/: adc.hpp  board.hpp  config.hpp  dma.hpp  etl_profile.h  i2c.hpp  log.hpp  lut.hpp  midi.hpp  midi2cv.hpp  pcm1681.hpp  sai.hpp
src/: CMakeLists.txt  cv_convert.c  main.c  main.cpp  mcp4728.c  midi2cv.cpp  midi_receive.c  system_config.c
